--- a/about.html
+++ b/about.html
@@ -47,83 +47,49 @@
    </div>
   </div>
 <!-- Middle Info Start -->
-
-  <!-- Middle Top Start -->
-  <div class="middle-top">
-    <div class="container mid">
-      <div class="mid-left">
-      <h1>This isn’t as hard as it looks.</h1>
-      <h1>I promise.</h1>
-      <h3 class="top-pad">Because you are the next generation of web</h3>
-      <h3>designers and developers.</h3>
-      <h5 class="top-pad">Gratuitous octopus niacin, sodium glutimate.</h5>
-      <small>Quote meon an estimate et non interruptus stadium. </small>
-      <div class="mid-buttons">
-        <div class="quote">Get a Quote</div>
-        <div class="port">View Portfolio</div>
+<div class="middle">
+  <div class="container sub-mid">
+    <div class="sub-mid-left">
+      <div class="about-links">
+        <h3>FREE CALL</h3>
+        <h1>0800 658 954</h1>
+        <div class="link1">OVERVIEW</div>
+        <div class="link2">TEAM</div>
+        <div class="link3">NEWS</div>
+        <div class="link4">CAREERS</div>
+        <div class="link5">LOCATIONS</div>`
       </div>
-      </div>
-      <div class="mid-right">
-        <img src="images/header_images.png" alt="Middle Image">
-      </div>
-    </div>
-  </div>
-  <!-- Middle Top End -->
-
-  <!-- Middle Bottom Start -->
-
-  
-  <div class="middle-bottom">
-    <!-- Tabs Start -->
-    <div class="tabs-container">
-     <div class="container">
-      <div class="design"><img src="images/web_design.png" alt="Web Design"></div>
-      <div class="marketing"><img src="images/marketing.png" alt="Marketing"></div>
-      <div class="consulting"><img src="images/consulting.png" alt="consulting"></div>
-      <div class="support"><img src="images/support.png" alt="support"></div>
-     </div>
-    </div>
-    <!-- Tabs End -->
-
-     <!--Web Design Info Start-->
-  <div class="container">
-    <div class="featured">
-      <figure>
-        <img src="images/featured.png" alt="Web Design Featured Image">
-        <figcaption><small><span class="freelance">Freelance designer</span> - January 2009</small></figcaption>
-      </figure>
-    </div>
-    <div class="design_info">
-      <h1>We make the best websites!</h1>
-      <h3>Because web design is our passion</h3>
-      <h3>and that’s what we do.</h3>
-      <div class="skills1">
+      <div class="skills">
         <ul>
           <li>Design</li>
           <li>(x)HTML / CSS</li>
           <li>Javascript</li>
           <li>Custom CMS (BVD)</li>
-        </ul>
-      </div>
-      <div class="skills2">
-        <ul>
-          <li>Project managment</li>
+          <li class="top-margin">Project managment</li>
           <li>Hosting</li>
           <li>Support</li>
         </ul>
       </div>
-      <h5>Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadi</h5>
     </div>
+    <div class="sub-mid-right">
+      <h1>About BVD</h1>
+      <h2>The best design agency in the world</h2>
+      <h3>What we can offer?</h3>
+      <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre.</p>
 
+      <p>Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadium. Sic tempus fugit esperanto hiccup estrogen. Glorious baklava ex librus hup hey ad infinitum. Non sequitur condominium facile et geranium incognit</p>
+
+      <h3>Why are we doing this?</h3>
+      <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre.</p>
+
+      <p>Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadium. Sic tempus fugit esperanto hiccup estrogen. Glorious baklava ex librus hup hey ad infinitum. Non sequitur condominium facile et geranium incognit</p>
+    </div>
     <figure class="testimonial">
       <image src="images/testimonial.jpg"></image>
     </figure>
-
   </div>
-  <!--Web Design Info End -->
+</div>
   
-  </div>
-  <!-- Middle Bottom End -->
 <!-- Middle Info End -->
 
 <!-- Bottom Info Start -->
