--- a/blog.html
+++ b/blog.html
@@ -47,83 +47,53 @@
    </div>
   </div>
 <!-- Middle Info Start -->
+<div class="middle">
+  <div class="container sub-mid">
+    <div class="sub-mid-left">
+      <div class="blog-links">
+        <h1>The Blog</h1>
+        <div class="link1">GENERAL</div>
+        <div class="link2">DESIGN</div>
+        <div class="link3">DEVELOPMENT</div>
+        <div class="link4">CODING</div>
+        <div class="link5">LIFESTYLE</div>
+        <div class="link6">FATHERHOOD</div>
+      </div>
+      <h3>Subscribe</h3>
+      <h6>RSS Feed</h6>
+      <h6>Email Updates</h6>
+      <div><img src="images/readers.png" alt=""></div>
+      <figure><img src="images/flickr.png" alt="">
+    </div>
 
-  <!-- Middle Top Start -->
-  <div class="middle-top">
-    <div class="container mid">
-      <div class="mid-left">
-      <h1>This isn’t as hard as it looks.</h1>
-      <h1>I promise.</h1>
-      <h3 class="top-pad">Because you are the next generation of web</h3>
-      <h3>designers and developers.</h3>
-      <h5 class="top-pad">Gratuitous octopus niacin, sodium glutimate.</h5>
-      <small>Quote meon an estimate et non interruptus stadium. </small>
-      <div class="mid-buttons">
-        <div class="quote">Get a Quote</div>
-        <div class="port">View Portfolio</div>
-      </div>
-      </div>
-      <div class="mid-right">
-        <img src="images/header_images.png" alt="Middle Image">
-      </div>
+    <div class="sub-mid-right">
+      <article>
+        <h1>Ordered and Unordered Lists</h1>
+        <h6>published on <em>22.01.2009</em> in <span class="orange">Websites </span>tagged <span class="orange">Themeforest, Corporate</span></h6>
+        <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. <span class="orange"> <em>Read more</em></span></p>
+      </article>
+      
+      <article>
+        <h1 class="top-pad">Save $30 with a Yearly Subscription to Plus</h1>
+        <h6>published on <em>22.01.2009</em> in <span class="orange">Websites </span>tagged <span class="orange">Themeforest, Corporate</span></h6>
+        <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. <span class="orange"> <em>Read more</em></span></p>
+      </article>
+
+      <article>
+        <h1 class="top-pad">How to Become a Freelance Web Developer</h1>
+        <h6>published on <em>22.01.2009</em> in <span class="orange">Websites </span>tagged <span class="orange">Themeforest, Corporate</span></h6>
+        <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. <span class="orange"> <em>Read more</em></span></p>
+      </article>
+      
+      <article>
+        <h1 class="top-pad">Make an iPhone App Using the Envato API</h1>
+        <h6>published on <em>22.01.2009</em> in <span class="orange">Websites </span>tagged <span class="orange">Themeforest, Corporate</span></h6>
+        <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. <span class="orange"> <em>Read more</em></span></p>
+      </article>
     </div>
   </div>
-  <!-- Middle Top End -->
-
-  <!-- Middle Bottom Start -->
-
+</div>
   
-  <div class="middle-bottom">
-    <!-- Tabs Start -->
-    <div class="tabs-container">
-     <div class="container">
-      <div class="design"><img src="images/web_design.png" alt="Web Design"></div>
-      <div class="marketing"><img src="images/marketing.png" alt="Marketing"></div>
-      <div class="consulting"><img src="images/consulting.png" alt="consulting"></div>
-      <div class="support"><img src="images/support.png" alt="support"></div>
-     </div>
-    </div>
-    <!-- Tabs End -->
-
-     <!--Web Design Info Start-->
-  <div class="container">
-    <div class="featured">
-      <figure>
-        <img src="images/featured.png" alt="Web Design Featured Image">
-        <figcaption><small><span class="freelance">Freelance designer</span> - January 2009</small></figcaption>
-      </figure>
-    </div>
-    <div class="design_info">
-      <h1>We make the best websites!</h1>
-      <h3>Because web design is our passion</h3>
-      <h3>and that’s what we do.</h3>
-      <div class="skills1">
-        <ul>
-          <li>Design</li>
-          <li>(x)HTML / CSS</li>
-          <li>Javascript</li>
-          <li>Custom CMS (BVD)</li>
-        </ul>
-      </div>
-      <div class="skills2">
-        <ul>
-          <li>Project managment</li>
-          <li>Hosting</li>
-          <li>Support</li>
-        </ul>
-      </div>
-      <h5>Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadi</h5>
-    </div>
-
-    <figure class="testimonial">
-      <image src="images/testimonial.jpg"></image>
-    </figure>
-
-  </div>
-  <!--Web Design Info End -->
-  
-  </div>
-  <!-- Middle Bottom End -->
 <!-- Middle Info End -->
 
 <!-- Bottom Info Start -->
