--- a/contact.html
+++ b/contact.html
@@ -47,83 +47,63 @@
    </div>
   </div>
 <!-- Middle Info Start -->
+<div class="middle">
+  <div class="container sub-mid">
+    <div class="sub-mid-left">
+      <div class="about-links contact">
+        <h5 class="top-margin">Office Europe</h5>
+        <b>Phone:</b><br>
+        +4568 65 9 66<br>
+        <b>Fax:</b><br>
+        +4568 95 6 5<br>
+        <b>Email:</b> adress@adress.com
 
-  <!-- Middle Top Start -->
-  <div class="middle-top">
-    <div class="container mid">
-      <div class="mid-left">
-      <h1>This isn’t as hard as it looks.</h1>
-      <h1>I promise.</h1>
-      <h3 class="top-pad">Because you are the next generation of web</h3>
-      <h3>designers and developers.</h3>
-      <h5 class="top-pad">Gratuitous octopus niacin, sodium glutimate.</h5>
-      <small>Quote meon an estimate et non interruptus stadium. </small>
-      <div class="mid-buttons">
-        <div class="quote">Get a Quote</div>
-        <div class="port">View Portfolio</div>
+        <h5 class="top-margin">Office Asia</h5>
+        <b>Phone:</b><br>
+        +4568 65 9 66<br>
+        <b>Fax:</b><br>
+        +4568 95 6 5<br>
+        <b>Email:</b> adress@adress.com
+      
       </div>
-      </div>
-      <div class="mid-right">
-        <img src="images/header_images.png" alt="Middle Image">
+      <div class="side-bottom">
+        <h4>Something about our <span class="orange">web design</span></h4>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris eget dolor. </p>
+        <p>Phasellus elementum accumsan risus. Mauris eget dolor. </p>
+        <p>Phasellus elementum accumsan risus</p>
       </div>
     </div>
+    <div class="sub-mid-right contact-mid">
+
+      <h1>Contact</h1>
+      <h2>We can answer all your questions</h2>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris eget dolor. Phasellus <span class="orange">elementum</span> accumsan risus. Mauris eget dolor.</p>
+      <p>Phasellus elementum  <span class="orange">accumsan risus.</span></p>
+
+      <form action="" method="post" >
+      <div class="continput"><input type="text" name="name" size="25" id="name" placeholder="Name"></div>
+      <div class="continput"><input type="text" name="email" size="25" id="email" placeholder="E-mail"></div>
+      <div class="continput"><input type="text" name="subject" size="25" id="subject" placeholder="Subject"></div>
+      <div class="continput"><textarea rows="5" name="message" cols="55" id="message" placeholder="Message" ></textarea></div>
+    </form>
+    <h5>SEND</h5>
+
+    <div class="google">
+      <div class="google-left">
+        <h4>Find us via Google Maps</h4>
+        <img src="images/map.png" alt="">
+      </div>
+      <div class="google-right">
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris eget dolor.</p>
+        <p>Phasellus <span class="orange">elementum</span> accumsan risus. Mauris eget dolor.</p>
+        <p>Phasellus elementum <span class="orange">accumsan risus</span>.</p>
+      </div>
+    </div>
+    </div>
+    
   </div>
-  <!-- Middle Top End -->
-
-  <!-- Middle Bottom Start -->
-
+</div>
   
-  <div class="middle-bottom">
-    <!-- Tabs Start -->
-    <div class="tabs-container">
-     <div class="container">
-      <div class="design"><img src="images/web_design.png" alt="Web Design"></div>
-      <div class="marketing"><img src="images/marketing.png" alt="Marketing"></div>
-      <div class="consulting"><img src="images/consulting.png" alt="consulting"></div>
-      <div class="support"><img src="images/support.png" alt="support"></div>
-     </div>
-    </div>
-    <!-- Tabs End -->
-
-     <!--Web Design Info Start-->
-  <div class="container">
-    <div class="featured">
-      <figure>
-        <img src="images/featured.png" alt="Web Design Featured Image">
-        <figcaption><small><span class="freelance">Freelance designer</span> - January 2009</small></figcaption>
-      </figure>
-    </div>
-    <div class="design_info">
-      <h1>We make the best websites!</h1>
-      <h3>Because web design is our passion</h3>
-      <h3>and that’s what we do.</h3>
-      <div class="skills1">
-        <ul>
-          <li>Design</li>
-          <li>(x)HTML / CSS</li>
-          <li>Javascript</li>
-          <li>Custom CMS (BVD)</li>
-        </ul>
-      </div>
-      <div class="skills2">
-        <ul>
-          <li>Project managment</li>
-          <li>Hosting</li>
-          <li>Support</li>
-        </ul>
-      </div>
-      <h5>Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadi</h5>
-    </div>
-
-    <figure class="testimonial">
-      <image src="images/testimonial.jpg"></image>
-    </figure>
-
-  </div>
-  <!--Web Design Info End -->
-  
-  </div>
-  <!-- Middle Bottom End -->
 <!-- Middle Info End -->
 
 <!-- Bottom Info Start -->
