--- a/portfolio.html
+++ b/portfolio.html
@@ -47,83 +47,71 @@
    </div>
   </div>
 <!-- Middle Info Start -->
-
-  <!-- Middle Top Start -->
-  <div class="middle-top">
-    <div class="container mid">
-      <div class="mid-left">
-      <h1>This isn’t as hard as it looks.</h1>
-      <h1>I promise.</h1>
-      <h3 class="top-pad">Because you are the next generation of web</h3>
-      <h3>designers and developers.</h3>
-      <h5 class="top-pad">Gratuitous octopus niacin, sodium glutimate.</h5>
-      <small>Quote meon an estimate et non interruptus stadium. </small>
-      <div class="mid-buttons">
-        <div class="quote">Get a Quote</div>
-        <div class="port">View Portfolio</div>
+<div class="middle">
+  <div class="container sub-mid">
+    <div class="sub-mid-left">
+      <div class="about-links portfolio">
+        <h3 class="top-margin">CATEGORIES</h3>
+        <div class="link1">WEB DESIGN</div>
+        <div class="link2">PRINT DESIGN</div>
+        <div class="link3">MOTION</div>
+        <div class="link4">MULTIMEDIA</div>
+        <div class="link5">OTHER</div>`
       </div>
-      </div>
-      <div class="mid-right">
-        <img src="images/header_images.png" alt="Middle Image">
+      <div class="side-bottom">
+        <h4>Something about our <span class="orange">web design</span></h4>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris eget dolor. </p>
+        <p>Phasellus elementum accumsan risus. Mauris eget dolor. </p>
+        <p>Phasellus elementum accumsan risus</p>
       </div>
     </div>
+    <div class="sub-mid-right port-mid">
+      <h1>Portfolio</h1>
+      <h2>We only create quality works</h2>
+      <article class="main">
+        <figure class="main-img"><img src="images/idea.png" alt=""></figure>
+        <div class="main-info">
+          <header><h2>Idea - business design</h2></header>
+          <h6>in <span class="orange"><b>Websites</b></span> tagged <span class="orange"><b>Themeforest, Corporate</b></span></h6>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris eget dolor. Phasellus elementum accumsan risus.</p>
+
+          <p>Proin commodo, magna at mattis posuere, orci justo molestie nunc, vel vestibulum orci leo ut libero. Donec aliquam venenatis tortor. Etiam ac enim.</p>
+        </div>
+      </article>
+
+      <article class="secondary">
+        <div class="left">
+          <img src="images/port1.png" alt="">
+        </div>
+          <div class="right">
+            <header><h2>PRO design</h2></header>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris eget dolor. Phasellus elementum accumsan risus. <br>
+            Mauris eget dolor. Phasellus elementum accumsan risu</p>
+      </article>
+
+      <article class="secondary">
+        <div class="left">
+          <img src="images/port2.png" alt="">
+        </div>
+          <div class="right">
+            <header><h2>Freelanc Designer</h2></header>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris eget dolor. Phasellus elementum accumsan risus. <br>
+            Mauris eget dolor. Phasellus elementum accumsan risu</p>
+      </article>
+
+      <article class="secondary">
+        <div class="left">
+          <img src="images/port3.png" alt="">
+        </div>
+          <div class="right">
+            <header><h2>Awesomeness</h2></header>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris eget dolor. Phasellus elementum accumsan risus. <br>
+            Mauris eget dolor. Phasellus elementum accumsan risu</p>
+      </article>
+    </div>
   </div>
-  <!-- Middle Top End -->
-
-  <!-- Middle Bottom Start -->
-
+</div>
   
-  <div class="middle-bottom">
-    <!-- Tabs Start -->
-    <div class="tabs-container">
-     <div class="container">
-      <div class="design"><img src="images/web_design.png" alt="Web Design"></div>
-      <div class="marketing"><img src="images/marketing.png" alt="Marketing"></div>
-      <div class="consulting"><img src="images/consulting.png" alt="consulting"></div>
-      <div class="support"><img src="images/support.png" alt="support"></div>
-     </div>
-    </div>
-    <!-- Tabs End -->
-
-     <!--Web Design Info Start-->
-  <div class="container">
-    <div class="featured">
-      <figure>
-        <img src="images/featured.png" alt="Web Design Featured Image">
-        <figcaption><small><span class="freelance">Freelance designer</span> - January 2009</small></figcaption>
-      </figure>
-    </div>
-    <div class="design_info">
-      <h1>We make the best websites!</h1>
-      <h3>Because web design is our passion</h3>
-      <h3>and that’s what we do.</h3>
-      <div class="skills1">
-        <ul>
-          <li>Design</li>
-          <li>(x)HTML / CSS</li>
-          <li>Javascript</li>
-          <li>Custom CMS (BVD)</li>
-        </ul>
-      </div>
-      <div class="skills2">
-        <ul>
-          <li>Project managment</li>
-          <li>Hosting</li>
-          <li>Support</li>
-        </ul>
-      </div>
-      <h5>Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadi</h5>
-    </div>
-
-    <figure class="testimonial">
-      <image src="images/testimonial.jpg"></image>
-    </figure>
-
-  </div>
-  <!--Web Design Info End -->
-  
-  </div>
-  <!-- Middle Bottom End -->
 <!-- Middle Info End -->
 
 <!-- Bottom Info Start -->
