--- a/pricing.html
+++ b/pricing.html
@@ -47,83 +47,98 @@
    </div>
   </div>
 <!-- Middle Info Start -->
+<div class="middle">
+  <div class="container sub-mid">
+    <div class="pricing-middle">
+      <div>
+        <div class="head-info">
+          <h1>Pricing</h1>
+          <h3>Because not all services are the same</h3>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris eget dolor.  Phasellus elementum accumsan risus. Mauris eget dolor. Phasellus elementum accumsan risus. </p>
+        </div>
+        <div class="cards">
+          <h5>We accept these credit cards:</h5>
+          <img src="images/cards.png" alt="">
+        </div>
+      </div>
+      <div class="prices">
+        <div class="active-button"></div>
+        <div class="column">
+          <h1>Professional</h1>
+          <h5>For professionals</h5>
+          <h6><span class="price">199,99 $</span> one time only</h6>
+          <div class="buy"></div>          
+        <div class="skills">
+          <ul>
+            <li>Design</li>
+            <li>(x)HTML / CSS</li>
+            <li>Javascript</li>
+            <li class="x">Custom CMS (BVD)</li>
+            <li class="top-margin x">Project managment</li>
+            <li>Hosting</li>
+            <li>Support</li>
+          </ul>
+        </div>
+        </div>
 
-  <!-- Middle Top Start -->
-  <div class="middle-top">
-    <div class="container mid">
-      <div class="mid-left">
-      <h1>This isn’t as hard as it looks.</h1>
-      <h1>I promise.</h1>
-      <h3 class="top-pad">Because you are the next generation of web</h3>
-      <h3>designers and developers.</h3>
-      <h5 class="top-pad">Gratuitous octopus niacin, sodium glutimate.</h5>
-      <small>Quote meon an estimate et non interruptus stadium. </small>
-      <div class="mid-buttons">
-        <div class="quote">Get a Quote</div>
-        <div class="port">View Portfolio</div>
+        <div class="column">
+          <h1 class="active">Basic</h1>
+          <h6><span class="price">59,99 $</span> one time only</h6>
+          <div class="buy"></div>          
+        <div class="skills">
+          <ul>
+            <li>Design</li>
+            <li>(x)HTML / CSS</li>
+            <li>Javascript</li>
+            <li class="x">Custom CMS (BVD)</li>
+            <li class="top-margin x">Project managment</li>
+            <li class="x">Hosting</li>
+            <li class="x">Support</li>
+          </ul>
+        </div>
+        </div>
+
+        <div class="column">
+          <h1>Advanced</h1>
+          <h5>High-end customers</h5>
+          <h6><span class="price">399,99 $</span> one time only</h6>
+          <div class="buy"></div>          
+        <div class="skills">
+          <ul>
+            <li>Design</li>
+            <li>(x)HTML / CSS</li>
+            <li>Javascript</li>
+            <li class="x">Custom CMS (BVD)</li>
+            <li class="top-margin x">Project managment</li>
+            <li>Hosting</li>
+            <li>Support</li>
+          </ul>
+        </div>
+        </div>
+
+        <div class="column">
+          <h1>Nitro</h1>
+          <h5>Fuel powered hybrid system</h5>
+          <h6><span class="price">899,99 $</span> one time only</h6>
+          <div class="buy"></div>          
+        <div class="skills">
+          <ul>
+            <li>Design</li>
+            <li>(x)HTML / CSS</li>
+            <li>Javascript</li>
+            <li class="x">Custom CMS (BVD)</li>
+            <li class="top-margin x">Project managment</li>
+            <li>Hosting</li>
+            <li>Support</li>
+          </ul>
+        </div>
+        </div>
       </div>
-      </div>
-      <div class="mid-right">
-        <img src="images/header_images.png" alt="Middle Image">
-      </div>
+      
     </div>
   </div>
-  <!-- Middle Top End -->
-
-  <!-- Middle Bottom Start -->
-
+</div>
   
-  <div class="middle-bottom">
-    <!-- Tabs Start -->
-    <div class="tabs-container">
-     <div class="container">
-      <div class="design"><img src="images/web_design.png" alt="Web Design"></div>
-      <div class="marketing"><img src="images/marketing.png" alt="Marketing"></div>
-      <div class="consulting"><img src="images/consulting.png" alt="consulting"></div>
-      <div class="support"><img src="images/support.png" alt="support"></div>
-     </div>
-    </div>
-    <!-- Tabs End -->
-
-     <!--Web Design Info Start-->
-  <div class="container">
-    <div class="featured">
-      <figure>
-        <img src="images/featured.png" alt="Web Design Featured Image">
-        <figcaption><small><span class="freelance">Freelance designer</span> - January 2009</small></figcaption>
-      </figure>
-    </div>
-    <div class="design_info">
-      <h1>We make the best websites!</h1>
-      <h3>Because web design is our passion</h3>
-      <h3>and that’s what we do.</h3>
-      <div class="skills1">
-        <ul>
-          <li>Design</li>
-          <li>(x)HTML / CSS</li>
-          <li>Javascript</li>
-          <li>Custom CMS (BVD)</li>
-        </ul>
-      </div>
-      <div class="skills2">
-        <ul>
-          <li>Project managment</li>
-          <li>Hosting</li>
-          <li>Support</li>
-        </ul>
-      </div>
-      <h5>Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadi</h5>
-    </div>
-
-    <figure class="testimonial">
-      <image src="images/testimonial.jpg"></image>
-    </figure>
-
-  </div>
-  <!--Web Design Info End -->
-  
-  </div>
-  <!-- Middle Bottom End -->
 <!-- Middle Info End -->
 
 <!-- Bottom Info Start -->
